welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: error: not enough arguments for method hunt: (c: java.awt.Color)Unit.
Unspecified value parameter c.
    hunt()
        ^SlugSnail:20: error: not enough arguments for method hunt: (c: java.awt.Color)Unit.
Unspecified value parameter c.
      hunt()
          ^SlugSnail:25: error: not enough arguments for method hunt: (c: java.awt.Color)Unit.
Unspecified value parameter c.
        hunt()
            ^